[package]
name = "rustTest"
version = "0.1.0"
authors = ["Dima Sazonoff <dima.sazonoff3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binance = { git = "https://github.com/wisespace-io/binance-rs.git" }