[package]
name = "rustTest"
version = "0.1.0"
authors = ["Dima Sazonoff <dima.sazonoff3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
websocket = { git = "https://github.com/websockets-rs/rust-websocket.git" }
json = { git = "https://github.com/maciejhirsz/json-rust.git" }
chrono = { git = "https://github.com/chronotope/chrono.git" }